--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Reactivities_Project.db"
   }
 }
